0.6
- Hide idle mouse cursor when above the video
- Volume keyboard shortcuts and status bar messages
- Better error reporting
- Spanish translation by Rafa
- Japanese translation by Kiwamu Okabe

0.5 - July 31, 2009
- Search autocomplete
- Skip to the next when a video cannot be loaded
- Playlist items can now be dropped onto the video area
- Fixed messages in the playlist not updating
- Disabled view crossfade on Linux
- Save keywords only when there are results
- Fixed fullscreen keyboard shortcurt not working
- Polish translation by Grzegorz Gibas

0.4 - July 2, 2009
- Finally fixed playback start problem on Mac OSX
- Display title and description while video is loading
- Compact mode, contributed by Stefan Brück
- Current video position and total time in the status bar
- Keyboard shortcuts now work when in full screen mode
- Fixed crash occurring when pressing stop during a search
- Argentin spanish translation by Sergio Tocalini Joerg
- German translation by Stefan Brück

0.3 - June 15, 2009
- Can sort videos by relevance, date and popularity
- Doubleclick on video goes full screen
- Video context menu
- Can remove videos using the Backspace key, Mac laptops lack a Delete key
- Keyboard shortcut to give focus to the search box
- Load thumbnails asynchronously
- Fixed wrong (absurdly high) number views on some videos
- Now Minitube is ready to be translated. Italian, Russian and Portuguese translations available
- Cosmetics

0.2.1 - June 1, 2009
- Fixed showstopper bug on Linux: Minitube fails to automatically play the next video

0.2 - May 29, 2009
- Faster playlist results
- Ability to (re)move selected playlist items
- Drag'n'drop playlist items
- Uses less memory
- Basic fullscreen mode now works
- Show the total number of views of a video
- Video duration is now overlayed on the thumb
- Update notifier

0.1 - May 15, 2009
First release