@@ -1,0 +1,430 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="cs_CZ" sourcelanguage="en_US">
+<defaultcodec>UTF-8</defaultcodec>
+<context>
+    <name>AboutView</name>
+    <message>
+        <location filename="src/AboutView.cpp" line="20"/>
+        <source>There&apos;s life outside the browser!</source>
+        <translation>Život existuje i mimo prohlížeč!</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="21"/>
+        <source>Version %1</source>
+        <translation>Verze %1</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="24"/>
+        <source>This is a &quot;Technology Preview&quot; release, do not expect it to be perfect.</source>
+        <translation>Toto je vývojová verze, neočekávejte plnou funkčnost.</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="25"/>
+        <source>Report bugs and send in your ideas to %1</source>
+        <translation>Hlaste chyby a posílejte své nápady na %1</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="28"/>
+        <source>%1 is Free Software but its development takes precious time.</source>
+        <translation>%1 je svobodný software, ale jeho vývoj stoji drahocenný čas.</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="29"/>
+        <source>Please &lt;a href=&apos;%1&apos;&gt;donate via PayPal&lt;/a&gt; to support the continued development of %2.</source>
+        <translation>Prosím &lt;a href=&apos;%1&apos;&gt;přispějte přes PayPal&lt;/a&gt; a podpořte další vývoj aplikace %2.</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="32"/>
+        <source>Icon designed by %1.</source>
+        <translation>Autor ikony: %1.</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="34"/>
+        <source>Compact mode contributed by %1.</source>
+        <translation>Autor kompaktního módu: %1.</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="36"/>
+        <source>Translated by %1</source>
+        <translation>Přeložili: %1</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="43"/>
+        <source>Released under the &lt;a href=&apos;%1&apos;&gt;GNU General Public License&lt;/a&gt;</source>
+        <translation>Vydáno pod &lt;a href=&apos;%1&apos;&gt;licencí GNU General Public License&lt;/a&gt;</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.cpp" line="54"/>
+        <source>&amp;Close</source>
+        <translation>&amp;Zavřít</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.h" line="18"/>
+        <source>About</source>
+        <translation>O aplikaci</translation>
+    </message>
+    <message>
+        <location filename="src/AboutView.h" line="20"/>
+        <source>What you always wanted to know about %1 and never dared to ask</source>
+        <translation>Co jste vždy chtěli vědět o aplikaci %1 ale nikdy jste se neodvážili zeptat</translation>
+    </message>
+</context>
+<context>
+    <name>ClearButton</name>
+    <message>
+        <location filename="src/searchlineedit.cpp" line="52"/>
+        <source>Clear</source>
+        <translation>Odstranit vše</translation>
+    </message>
+</context>
+<context>
+    <name>ListModel</name>
+    <message>
+        <location filename="src/ListModel.cpp" line="46"/>
+        <source>Searching...</source>
+        <translation>Hledám...</translation>
+    </message>
+    <message>
+        <location filename="src/ListModel.cpp" line="47"/>
+        <source>Show %1 More</source>
+        <translation>Zobrazit dalších %1</translation>
+    </message>
+    <message>
+        <location filename="src/ListModel.cpp" line="48"/>
+        <source>No videos</source>
+        <translation>Žádná videa</translation>
+    </message>
+    <message>
+        <location filename="src/ListModel.cpp" line="49"/>
+        <source>No more videos</source>
+        <translation>Žádná další videa</translation>
+    </message>
+</context>
+<context>
+    <name>LoadingWidget</name>
+    <message>
+        <location filename="src/loadingwidget.cpp" line="64"/>
+        <source>Error</source>
+        <translation>Chyba</translation>
+    </message>
+</context>
+<context>
+    <name>MainWindow</name>
+    <message>
+        <location filename="src/MainWindow.cpp" line="69"/>
+        <source>&amp;Back</source>
+        <translation>&amp;Zpět</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="72"/>
+        <source>Go to the previous view</source>
+        <translation>Vrátit se k předchozí obrazovce</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="76"/>
+        <source>&amp;Stop</source>
+        <translation>&amp;Stop</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="77"/>
+        <source>Stop playback and go back to the search view</source>
+        <translation>Zastavit přehrávání a vrátit se zpět na vyhledávání</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="82"/>
+        <source>S&amp;kip</source>
+        <translation>Př&amp;eskočit</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="83"/>
+        <source>Skip to the next video</source>
+        <translation>Přeskočit na další video</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="89"/>
+        <location filename="src/MainWindow.cpp" line="465"/>
+        <source>&amp;Pause</source>
+        <translation>&amp;Pauza</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="90"/>
+        <location filename="src/MainWindow.cpp" line="466"/>
+        <source>Pause playback</source>
+        <translation>Pozastavit přehrávání</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="96"/>
+        <location filename="src/MainWindow.cpp" line="511"/>
+        <source>&amp;Full Screen</source>
+        <translation>&amp;Celá obrazovka</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="97"/>
+        <source>Go full screen</source>
+        <translation>Přepnout na celou obrazovku</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="103"/>
+        <source>&amp;Compact mode</source>
+        <translation>&amp;Kompaktní mód</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="104"/>
+        <source>Hide the playlist and the toolbar</source>
+        <translation>Skrýt playlist a toolbar</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="122"/>
+        <source>&amp;YouTube</source>
+        <translation>&amp;YouTube</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="123"/>
+        <source>Open the YouTube video page</source>
+        <translation>Otevřít video na YouTube</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="129"/>
+        <source>&amp;Remove</source>
+        <translation>&amp;Odstranit</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="130"/>
+        <source>Remove the selected videos from the playlist</source>
+        <translation>Odstraní vybraná videa z playlistu</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="138"/>
+        <source>Move &amp;Up</source>
+        <translation>&amp;Nahoru</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="139"/>
+        <source>Move up the selected videos in the playlist</source>
+        <translation>Posune vybraná videa výš v playlistu</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="145"/>
+        <source>Move &amp;Down</source>
+        <translation>&amp;Dolů</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="146"/>
+        <source>Move down the selected videos in the playlist</source>
+        <translation>Posune vybraná videa níž v playlistu</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="152"/>
+        <source>&amp;Quit</source>
+        <translation>&amp;Zavřít</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="154"/>
+        <source>Ctrl+Q</source>
+        <translation>Ctrl+Q</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="155"/>
+        <source>Bye</source>
+        <translation>Sbohem</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="159"/>
+        <source>&amp;Website</source>
+        <translation>&amp;Homepage</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="161"/>
+        <source>%1 on the Web</source>
+        <translation>%1 na Webu</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="165"/>
+        <source>&amp;Donate via PayPal</source>
+        <translation>&amp;Podpořte přes PayPal</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="166"/>
+        <source>Please support the continued development of %1</source>
+        <translation>Prosím podpořte další vývoj aplikace %1</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="170"/>
+        <source>&amp;About</source>
+        <translation>&amp;O aplikaci</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="172"/>
+        <source>Info about %1</source>
+        <translation>Info o aplikaci %1</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="197"/>
+        <source>Ctrl+M</source>
+        <translation>Ctrl+M</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="230"/>
+        <source>&amp;Application</source>
+        <translation>&amp;Aplikace</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="236"/>
+        <source>&amp;Playlist</source>
+        <translation>&amp;Playlist</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="243"/>
+        <source>&amp;Video</source>
+        <translation>&amp;Video</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="256"/>
+        <source>&amp;Help</source>
+        <translation>&amp;Nápověda</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="405"/>
+        <location filename="src/MainWindow.cpp" line="411"/>
+        <source>Opening %1</source>
+        <translation>Otevírám %1</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="456"/>
+        <source>Fatal error: %1</source>
+        <translation>Chyba: %1</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="458"/>
+        <source>Error: %1</source>
+        <translation>Chyba: %1</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="479"/>
+        <source>&amp;Play</source>
+        <translation>&amp;Play</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="480"/>
+        <source>Resume playback</source>
+        <translation>Pokračovat v přehrávání</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="521"/>
+        <source>Exit &amp;Full Screen</source>
+        <translation>Vypnout &amp;fullscreen</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="641"/>
+        <source>Volume at %1%</source>
+        <translation>Hlasitost na %1%</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="646"/>
+        <source>Volume is muted</source>
+        <translation>Zvuk je ztlumen</translation>
+    </message>
+    <message>
+        <location filename="src/MainWindow.cpp" line="648"/>
+        <source>Volume is unmuted</source>
+        <translation>Zvuk je zapnut</translation>
+    </message>
+</context>
+<context>
+    <name>MediaView</name>
+    <message>
+        <location filename="src/MediaView.cpp" line="22"/>
+        <source>Most relevant</source>
+        <translation>Nalezená videa</translation>
+    </message>
+    <message>
+        <location filename="src/MediaView.cpp" line="27"/>
+        <source>Most recent</source>
+        <translation>Nejnovější</translation>
+    </message>
+    <message>
+        <location filename="src/MediaView.cpp" line="32"/>
+        <source>Most viewed</source>
+        <translation>Nejsledovanější</translation>
+    </message>
+    <message>
+        <location filename="src/MediaView.h" line="31"/>
+        <source>You&apos;re watching &quot;%1&quot;</source>
+        <translation>Sledujete &quot;%1&quot;</translation>
+    </message>
+</context>
+<context>
+    <name>NetworkAccess</name>
+    <message>
+        <location filename="src/networkaccess.cpp" line="157"/>
+        <source>Network error: %1</source>
+        <translation>Chyba připojení: %1</translation>
+    </message>
+</context>
+<context>
+    <name>PrettyItemDelegate</name>
+    <message>
+        <location filename="src/playlist/PrettyItemDelegate.cpp" line="142"/>
+        <source>%1 views</source>
+        <translation>Shlédnuto %1x</translation>
+    </message>
+</context>
+<context>
+    <name>SearchLineEdit</name>
+    <message>
+        <location filename="src/searchlineedit.cpp" line="173"/>
+        <source>Search</source>
+        <translation>Hledat</translation>
+    </message>
+</context>
+<context>
+    <name>SearchView</name>
+    <message>
+        <location filename="src/SearchView.cpp" line="36"/>
+        <source>Welcome to &lt;a href=&apos;%1&apos;&gt;%2&lt;/a&gt;,</source>
+        <translation>Vítejte v &lt;a href=&apos;%1&apos;&gt;%2&lt;/a&gt;</translation>
+    </message>
+    <message>
+        <location filename="src/SearchView.cpp" line="43"/>
+        <source>Enter a keyword to start watching videos.</source>
+        <translation>Zadejte klíčové slovo pro vyhledávání videí.</translation>
+    </message>
+    <message>
+        <location filename="src/SearchView.cpp" line="61"/>
+        <source>Watch</source>
+        <translation>Sledovat</translation>
+    </message>
+    <message>
+        <location filename="src/SearchView.cpp" line="77"/>
+        <source>Recent keywords</source>
+        <translation>Poslední klíčová slova</translation>
+    </message>
+    <message>
+        <location filename="src/SearchView.cpp" line="190"/>
+        <source>A new version of %1 is available. Please &lt;a href=&apos;%2&apos;&gt;update to version %3&lt;/a&gt;</source>
+        <translation>Nová verze aplikace %1 je dostupná. Prosím &lt;a href=&apos;%2&apos;&gt;aktualizujte na verzi %3&lt;/a&gt;</translation>
+    </message>
+    <message>
+        <location filename="src/SearchView.h" line="28"/>
+        <source>Make yourself comfortable</source>
+        <translation>Udělejte si pohodlí</translation>
+    </message>
+</context>
+<context>
+    <name>SettingsView</name>
+    <message>
+        <location filename="src/SettingsView.h" line="17"/>
+        <source>Preferences</source>
+        <translation>Nastavení</translation>
+    </message>
+</context>
+<context>
+    <name>Video</name>
+    <message>
+        <location filename="src/video.cpp" line="102"/>
+        <source>Network error: %1 for %2</source>
+        <translation>Chyba přípojení: %1 pro %2</translation>
+    </message>
+</context>
+</TS>
