@@ -4,6 +4,7 @@
 - Better error reporting
 - Spanish translation by Rafa
 - Japanese translation by Kiwamu Okabe
+- Czech translation by Dan Vrátil
 
 0.5 - July 31, 2009
 - Search autocomplete
